--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/core": "4.0.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
+    "@capacitor/splash-screen": "^4.0.1",
     "@capacitor/status-bar": "^4.0.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
